Fix mobile clickthrough and add spacing for mobile

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -89,6 +89,12 @@ img{
     padding:1em;
 }
 
+ @media only screen and (max-width: 600px) {
+        #portfolio img{
+            max-width:120%;
+            margin-left:-10%;
+        }  
+    }
 
 #navigation .white {
     a {
@@ -163,7 +169,7 @@ img{
 
         h1 {
             text-align: center;
-            font-size: 3.2em;
+            font-size: 2.9em;
             color:$white;
             flex-basis: 100%;
         }
@@ -605,7 +611,6 @@ img{
     }
     
     .project-box-desc{
-        z-index:10000000 !important;
         text-align: left;
     }
     
@@ -616,17 +621,17 @@ img{
         color:#484855;
         margin:0 !important;
         padding:0 !important;
-        font-size:1.1em !important;
+        font-size:1em !important;
         text-align: left !important;
     }
 
     h2{
         padding:.5em 0 0 0;
-        margin:0 0 -.3em 0;
+        margin:0 0 -.2em 0;
         font-family:"Sporting Grotesque";
         font-size:1.6em;
         color: #222127;
-        
+        line-height:1.3em;
     }
 
     h3 {
@@ -640,8 +645,13 @@ img{
     @media only screen and (max-width: 600px) {
         .quote-block{
             //display:none;
-            font-size:1em !important;
+            font-size:.9em !important;
         }  
+        
+        h2{
+            font-size:1.3em;
+            padding-bottom:.3em;
+        }
     }
 
 }
